# GraphLearning

./: .gitignore  README.md  pyproject.toml  requirements.txt
Task1/: run.py  svm.py  task4.py
Task1/Kernels/: closed_walk_kernel.py  graphlet_kernel.py  graphlets.py  wl2.py  wl_kernel.py
Task1/helper/: data_handling.py  graph_gen.py  matrix_io.py
Task2/: GCNGraph.py  GMLP.py  GNetwork.py  GraphClassification.py  GraphLevelGCN.py  NodeClassification.py  NodeLevelGCN.py  NormalLayer.py  README.md  hpo.py  preprocessing.py  pytorch_gcn_example.py  run.py
Task2/Modules/: GCNLayer.py  GNetwork.py  GraphLevelGCN.py  MLP.py  NodeLevelGCN.py  NormalLayer.py
Task3/: README.md  best_model  best_model152  best_model187  best_model20  best_model234  best_model284  best_model289  best_model358  best_model96  configurations.py  graph_classification.py  graph_regression.py  tt.py
Task3/DataHandling/: preprocessing.py  sparse_graph_dataset.py  sparse_graph_dataset_tests.py
Task3/Modules/: GraphRegressionGCN.py  RNetwork.py  sparse_gnn_layer.py  sparse_sum_pooling.py  virtual_node.py
