[tool.poetry]
name = "graphlearning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.8"
numpy = "^1.23.4"
scikit-learn = "^1.1.3"
argparse = "^1.4.0"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
